fix(front): fix font vertical align
Make fonts display the same in all browsers

--- a/front/assets/scss/global/_font-faces.scss
+++ b/front/assets/scss/global/_font-faces.scss
@@ -1,7 +1,7 @@
 /* Cocogoose */
 @font-face {
   font-family: 'Cocogoose';
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: fallback;
   src: local('Cocogoose'),
