--- a/front/assets/scss/variables/_fonts.scss
+++ b/front/assets/scss/variables/_fonts.scss
@@ -1,6 +1,5 @@
 /* Font family */
 $font-family-cocogoose: Cocogoose, sans-serif;
-$font-family-roboto: Roboto, sans-serif;
 $font-family-source-sans-pro: "Source Sans Pro", sans-serif;
 $font-family-password: ColllectPassword, Roboto, sans-serif;
 
